<resources>
    <string name="app_name">RideSharing </string>
    <string name="app_menu">Menu </string>
    <string name="action_settings">Settings </string>
    <string name="refresh">Refresh... </string>
    <string name="process_data">Process data...</string>
    <string name="logout">Sign out</string>
    <string name="finish_app">Do you want to log out? </string>
    <string name="day">day </string>
    <string name="hour">hour </string>
    <string name="min">min </string>
    <string name="change_info">Update</string>
    <string name="hint">Hint </string>
    <string name="list">List</string>
    <string name="hint_email">Enter your email </string>
    <string name="hint_password">Enter your password </string>
    <string name="cost">Cost (VNĐ) </string>
    <string name="btn_login">Sign in </string>
    <string name="btn_change_password">Change Password </string>
    <string name="btn_upgrade_driver">Driver</string>
    <string name="btn_register">Sign up </string>
    <string name="no_input">Please enter complete infomation </string>
    <string name="incorrect_password">Wrong Email or Password</string>
    <string name="btn_link_to_forgot_password">Forgot Password </string>
    <string name="btn_link_to_login">Sign in Screen </string>
    <string name="persionalID">PersionalID </string>
    <string name="imagePersionalID">PersionalID Image </string>
    <string name="start_addess">Start Address </string>
    <string name="email">Email </string>
    <string name="welcome">Welcome </string>
    <string name="btn_logout">Sign out </string>
    <string name="btn_submitAdvance">Detail</string>
    <string name="name">Full name </string>
    <string name="drawer_open">Slider Menu Opened </string>
    <string name="drawer_close">Slider Menu Closed </string>
    <string name="desc_list_item_icon">Item Icon </string>
    <string name="search_hint">Search area </string>
    <string name="email_hint">Enter your email </string>
    <string name="home_screen">Home Screen </string>
    <string name="str_atv_places">Search area </string>
    <string name="btn_link_to_detail_itinerary">Click to see detail </string>
    <string name="btn_submit_itinerary">Join in Itinerary </string>
    <string name="edit">Edit </string>
    <string-array name="nav_drawer_items_user">
        <item>Search Itinerary </item>
        <item>Profile Info </item>
        <item>Manage Itinerary </item>
        <item>Manage Message</item>
        <item>Statistic </item>
        <item>About Us </item>
        <item>Logout </item>
    </string-array>
    <string-array name="nav_drawer_items_driver">
        <item>Register Itinerary </item>
        <item>Manage Vehicle </item>
    </string-array>
    <string-array name="nav_drawer_icons">
        <item>@drawable/ic_search_itinerary </item>
        <item>@drawable/ic_profile </item>
        <item>@drawable/ic_manage_itinerary </item>
        <item>@drawable/ic_manage_message</item>
        <item>@drawable/ic_statistic </item>
        <item>@drawable/ic_about_us </item>
        <item>@drawable/ic_logout </item>
    </string-array>
    <string-array name="nav_drawer_icons_driver">
        <item>@drawable/ic_register_itinerary </item>
        <item>@drawable/ic_manage_vehicle </item>
    </string-array>
    <string name="title_activity_itinerary">Search Itinerary </string>
    <string name="title_item_list">Items </string>
    <string name="title_item_detail">Item Detail </string>
    <string name="update_itinerary">Update infomation of itinerary </string>
    <string name="title_activity_popup_itinerary">PopupItineraryActivity </string>
    <string name="dialog_field_fullname">Enter your fullname </string>
    <string name="dialog_field_phone">Enter your phone </string>
    <string name="dialog_field_personalid">Enter your Persional_ID </string>
    <string name="driver_license">Driver License </string>
    <string name="driver_license_img">Image Driver License </string>
    <string name="opendialog">Open Dialog </string>
    <string name="dismiss">Dismiss </string>
    <string name="title_activity_google_maps">Map </string>
    <string name="btn_link_to_register">Not a member? Sign up now! </string>
    <string name="btn_link_back_login">Already have password, Login now! </string>
    <string name="btn_send_pass_to_mail">Get Password</string>
    <string name="title_activity_about_us">About Us </string>
    <string name="update_image">Update Image </string>
    <string name="change_profile">Edit</string>
    <string name="confirm_driver">You have registered to become driver </string>
    <string name="delete_itinerary">Delete Itinerary </string>
    <string name="btn_confirm_change">Submit </string>
    <string name="btn_cancel_change">Cancel </string>
    <string name="title_activity_manage_itinerary">List of itinerary </string>
    <string name="new_password">New Password </string>
    <string name="confirm_new_password">Confirm New Password </string>
    <string name="submit_change">Your infomation have changed </string>
    <string name="cancel_change">Your infomation not changed </string>
    <string name="update_success">Update completed </string>
    <string name="title_activity_detail_manage_itinerary">Mangage Itinerary </string>
    <string name="title_activity_tracking">Tracking </string>
    <string name="select_image">Select Image </string>
    <string name="change_pasword">Change Password </string>
    <string name="rating">Rating </string>
    <string name="comment">Comment </string>
    <string name="not_found_area">Not found area </string>
    <string name="current_address">Current Address </string>
    <string name="driver">Driver </string>
    <string name="feedback">Feedback </string>
    <string name="ok">OK </string>
    <string name="cancel">Cancel </string>
    <string name="camera">Camera </string>
    <string name="gallery">Library </string>
    <string name="about_app"> About App </string>
    <string name="btn_submit">Submit </string>
    <string name="date_picker">You have not choose this time </string>
    <string name="description">Description about Itinerary </string>
    <string name="distance">Distance (km) </string>
    <string name="driver_information">Update driver information</string>
    <string name="duration">Duration </string>
    <string name="end_addess">End Address </string>
    <string name="extra_info_itinerary">Check info in map, then click "Detail"</string>
    <string name="init">Init layout...</string>
    <string name="input_address">Enter your area </string>
    <string name="leave_date">Leave date </string>
    <string name="map">Map </string>
    <string name="no_directions">Cannot be determind the road. </string>
    <string name="no_load_map">Sorry! Not load the map </string>
    <string name="not_connect">Cannot connected to server </string>
    <string name="password_not_match">Password not match </string>
    <string name="personal_id">PersionalID </string>
    <string name="personal_id_img">PersionalID Image </string>
    <string name="personalid">PersionalID </string>
    <string name="personalid_img">PersionalID Image </string>
    <string name="phone">Phone</string>
    <string name="require_update_info_profile">You should update infomation to experience the full application </string>
    <string name="title_activity_forgot_password">Forgot Password </string>
    <string name="update_driver_information">Update Driver information</string>
    <string name="you_sure">Are you sure? </string>
    <string name="hint_name">Enter your full name </string>
    <string name="title_activity_user_profile">User Profile </string>
    <string name="title_activity_register_itinerary">Create Itinerary</string>
    <string name="title_activity_upgrade_profile">Upgrade Profile </string>
    <string name="title_activity_submit_itinerary">Submit Itinerary </string>
    <string name="title_activity_search_advance">Search Advance </string>
    <string name="title_activity_register_advance">Itinerary detail</string>
    <string name="slogan">....</string>
    <string name="info_basic">Infomation Contact </string>
    <string name="contact_us">Contact Us </string>
    <string name="author">Authors </string>
    <string name="driver_created">Created Itineraries </string>
    <string name="driver_waiting">Waiting driver accept</string>
    <string name="driver_waiting_detail">This sections contain itineraries that customer asked to join, and he/she waiting for you to "Accept" or "Deny" </string>
    <string name="driver_accepted">Ready to go</string>
    <string name="driver_accept_detail">This sections contain itineraries that both Driver and Customer agreed </string>
    <string name="driver_created_detail">This sections contain itineraries you created but no one has asked to join yet </string>
    <string name="choose_role">Choose role: </string>
    <string name="customer">Customer</string>
    <string name="title_activity_statistic">StatisticActivity</string>
    <string name="order_by">Order By:</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="searching">Searching...</string>
    <string name="statistic_customer">This is a chart show all itinerary you had joined.</string>
    <string name="statistic_driver">This is a chart show all itinerary you had created and gone.</string>
    <string name="statistic_itinerary">Itinerary</string>
    <string name="statistic_money">Money</string>
    <string name="driver_accept_customer">Do you accept Customer join in Itinerary?</string>
    <string name="customer_reject_itinerary">You have registered this itinerary and waiting for driver response. So, do you want to reject this itinerary?</string>
    <string name="deny">Deny</string>
    <string name="accept">Accept</string>
    <string name="join_in_itinerary">join in your itinerary</string>
    <string name="customer_profile">Customer Profile</string>
    <string name="btn_search">Search Itineraries</string>
    <string name="not_verify_driver">You do not have role to submit this itinerary, because you still be verified driver. Waiting for us to check your infomation</string>
    <string name="announce">Announce</string>
    <string name="review_app">Rating and comment for our app</string>
    <string name="review_user">Rating and comment for driver/user when you finished this itinerary.</string>
    <string name="start_itinerary">Start Itinerary</string>
    <string name="on_going">On Going</string>
    <string name="end_itinerary">End Itinerary</string>
    <string name="finish_itinerary">Itinerary finished</string>
    <string name="finish_itinerary_detail">This sections contain itineraries you finished</string>
    <string name="see_itinerary">See itinerary</string>
    <string name="reject_itinerary_menu">Reject Itinerary</string>
    <string name="see_customer_profile">See other</string>
    <string name="not_verify_user">You do not have role to submit this itinerary, because you still be verified user. Waiting for us to check your infomation</string>
    <string name="title_activity_vehicle">VehicleActivity</string>
    <string name="vehicle_page">Vehicle</string>
    <string name="license_plate">License Plate</string>
    <string name="reg_certificate">Registration Certificate</string>
    <string name="license_plate_image">License Plate Image</string>
    <string name="vehicle_image">Vehicle Image</string>
    <string name="moto_insurance_img">Moto Insurance Image</string>
    <string name="update">Update</string>
    <string name="title_activity_list_vehicle">ListVehicle</string>
    <string name="type_vehicle">Vehicle</string>
    <string name="field_type_vehicle">Type of vehicle</string>
    <string name="field_license_plate">License Plate</string>
    <string name="field_reg_certificate">Registration Certificate</string>
    <string name="title_activity_detail_vehicle">DetailVehicleActivity</string>
</resources>