<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <!-- Framelayout to display Fragments -->
    <fragment
        android:id="@+id/mapRegister"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".65"/>

    <ScrollView
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".35"
        android:layout_marginTop="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/txtStartAddress"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/start_addess"
                android:inputType="textNoSuggestions"
                android:onClick="showDialogonClick"
                android:padding="10dp"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

            <TextView
                android:id="@+id/txtEndAddress"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/end_addess"
                android:inputType="textNoSuggestions"
                android:onClick="showDialogonClick"
                android:padding="10dp"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip" >

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/flat_selector"
                    android:onClick="submitOnclick"
                    android:text="@string/btn_submit"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btnAdvance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/flat_selector"
                    android:onClick="AdvanceonClick"
                    android:text="@string/btn_submitAdvance"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>